# CPlusPlus_Repository

./: .gitignore  README.md
Task1_6/: CMakeLists.txt  main.cpp
Task2_6/: CMakeLists.txt  main.cpp
Task2_6/Classes/Executes/: Button.cpp  Component.cpp  Container.cpp  Label.cpp  Line.cpp  List.cpp  Panel.cpp  Window.cpp
Task2_6/Classes/Headers/: Button.h  Component.h  Container.h  Label.h  Line.h  List.h  Panel.h  Window.h
Task3_6/: CMakeLists.txt  main.cpp  simpleQueue.h  tests.cpp
Task3_6/src/: main.cpp  simpleQueue.h
Task3_6/tests/: CMakeLists.txt  QueueTests.cpp
Task4_6/: CMakeLists.txt  Task4_6.pro  input1.txt  input2.txt  lib.cpp  lib.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  out.txt
replaceSynonymsTest/: replaceSynonymsTest.pro  tst_replacesynonym.cpp
