cmake_minimum_required(VERSION 3.24)
project(Task2_6)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task2_6 main.cpp Classes/Executes/Component.cpp Classes/Headers/Component.h Classes/Executes/Container.cpp Classes/Headers/Container.h Classes/Executes/Window.cpp Classes/Headers/Window.h Classes/Executes/Label.cpp Classes/Headers/Label.h Classes/Executes/List.cpp Classes/Headers/List.h Classes/Executes/Button.cpp Classes/Headers/Button.h Classes/Executes/Panel.cpp Classes/Headers/Panel.h Classes/Executes/Line.cpp Classes/Headers/Line.h)
